--- a/examples/chat-app/.env.sample
+++ b/examples/chat-app/.env.sample
@@ -5,8 +5,8 @@ WATSONX_AI_IDENTITY_SERVER=iam.cloud.ibm.com
 WATSONX_AI_APIKEY=
 WATSONX_AI_PROJECT_ID=
 
-# run the command `wxflows whoami --apikey`
-WXFLOWS_APIKEY= 
+# run the command `stepzen whoami --apikey`
+STEPZEN_APIKEY=
 
-# endpoint shows in your terminal after running `wxflows deploy`
-WXFLOWS_ENDPOINT=
+# endpoint shows in your terminal after running `stepzen deploy`
+STEPZEN_ENDPOINT=
